Add locust image and locustfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,16 @@ services:
     ports:
       - 8000:8000
     entrypoint: ["sh", "init.sh"]
+  master:
+    image: locustio/locust
+    ports:
+      - "8089:8089"
+    volumes:
+      - ./locust:/mnt/locust
+    command: -f /mnt/locust/locustfile.py --master -H http://localhost:8000
+
+  worker:
+    image: locustio/locust
+    volumes:
+      - ./locust:/mnt/locust
+    command: -f /mnt/locust/locustfile.py --worker --master-host master
